--- a/ui/app/null.css
+++ b/ui/app/null.css
@@ -49,6 +49,18 @@ input, textarea, button, select {
     background-color: transparent;
 }
 
+textarea {
+    border: none;
+    overflow: auto;
+    outline: none;
+
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+
+    resize: none;
+}
+
 input::-ms-clear {
     display: none;
 }
