--- a/ui/components/ReportsPage/ReportsList/ReportsList.module.scss
+++ b/ui/components/ReportsPage/ReportsList/ReportsList.module.scss
@@ -1,7 +1,13 @@
 .reportsList {
   width: 100%;
+  height: 100%;
+  overflow: auto;
 
   > * {
-    margin: 5px 0;
+    margin-bottom: 8px;
+  }
+
+  &::-webkit-scrollbar {
+    display: none;
   }
 }
