--- a/ui/components/ReportsPage/ReportsPage/ReportsPage.module.scss
+++ b/ui/components/ReportsPage/ReportsPage/ReportsPage.module.scss
@@ -1,9 +1,19 @@
 .reportsPage {
+  padding: 10px;
   width: 100%;
   display: flex;
+  flex-direction: row;
   justify-content: center;
+  align-items: flex-start;
+
+  .newReportInputContainer {
+    margin-right: 10px;
+    width: 600px;
+    height: 400px;
+  }
 
   .reportsList {
-    width: 90%;
+    height: 100vh;
+    flex: 1;
   }
 }
