--- a/ui/ui/general/themes.module.scss
+++ b/ui/ui/general/themes.module.scss
@@ -46,8 +46,9 @@
   }
 
   &.Type_outline {
+    background-color: white;
     border: 2px solid rgba(51, 51, 51, 0.5);
-    color: white;
+    color: rgba(51, 51, 51, 0.5);
   }
 }
 
