--- a/ui/components/ReportsPage/Report/ReportTask.module.scss
+++ b/ui/components/ReportsPage/Report/ReportTask.module.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   background-color: white;
   border-radius: 5px;
   border: 1px solid rgba(51, 51, 51, 0.5);
@@ -31,9 +31,38 @@
       font-size: 13px;
       color: rgba(51, 51, 51, 0.5);
     }
+  }
 
-    .status > .value {
+  > .reportBody {
+    position: relative;
+    overflow: hidden;
+    padding: 5px;
+    width: 600px;
+    height: 100px;
+    border-radius: 5px;
+    border: 2px solid rgba(51, 51, 51, 0.2);
+    box-shadow: inset 0 0 10px 2px white;
+    transition: height 0.2s ease-in-out;
 
+    > .text {
+      word-break: break-word;
+      font-size: 13px;
+    }
+
+    > .copyIcon {
+      opacity: 0;
+      cursor: pointer;
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      width: 20px;
+      height: 20px;
+      background-color: white;
+      transition: opacity 0.2s ease-in-out;
+    }
+
+    &:hover > .copyIcon {
+      opacity: 1;
     }
   }
 
