--- a/ui/components/ReportsPage/Report/ReportTask.module.scss
+++ b/ui/components/ReportsPage/Report/ReportTask.module.scss
@@ -16,6 +16,7 @@
   .info {
     display: flex;
     flex-direction: column;
+    width: 330px;
 
     > * {
       margin: 2px 0;
@@ -45,8 +46,13 @@
     transition: height 0.2s ease-in-out;
 
     > .text {
-      word-break: break-word;
+      overflow-x: auto;
+      max-width: 100%;
       font-size: 13px;
+    }
+
+    > .text::-webkit-scrollbar {
+      display: none;
     }
 
     > .copyIcon {
