--- a/ui/components/ReportsPage/NewReportInput/NewReportInput.module.scss
+++ b/ui/components/ReportsPage/NewReportInput/NewReportInput.module.scss
@@ -18,7 +18,6 @@
       width: 100%;
       display: flex;
       flex-direction: row;
-      // justify-content: space-between;
     }
 
     .form_element > input,
@@ -41,6 +40,7 @@
       width: 70%;
       height: 400px;
       border: 1px solid #ccc;
+      border-radius: 4px;
     }
   }
 
