--- a/ui/components/ReportsPage/NewReportInput/NewReportInput.module.scss
+++ b/ui/components/ReportsPage/NewReportInput/NewReportInput.module.scss
@@ -7,6 +7,10 @@
   display: flex;
   flex-direction: column;
 
+  button {
+    margin-top: 20px;
+  }
+
   .form {
     width: 100%;
     display: flex;
@@ -51,8 +55,10 @@
   }
 
   .message {
-    padding: 20px;
+    margin-top: 5px;
+    padding: 10px;
     width: 100%;
+    font-size: 13px;
     border-radius: 5px;
 
     &.success {
