--- a/ui/components/ReportsPage/NewReportInput/NewReportInput.module.scss
+++ b/ui/components/ReportsPage/NewReportInput/NewReportInput.module.scss
@@ -1,11 +1,12 @@
 .newReportInput {
-  border: 2px solid #ccc;
+  // border: 2px solid #ccc;
   padding: 12px;
   border-radius: 4px;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
+  background-color: white;
 
   button {
     margin-top: 20px;
