--- a/ui/components/ReportsPage/Report/ReportTask.module.scss
+++ b/ui/components/ReportsPage/Report/ReportTask.module.scss
@@ -6,7 +6,7 @@
   align-items: flex-start;
   background-color: white;
   border-radius: 5px;
-  border: 1px solid rgba(51, 51, 51, 0.5);
+  // border: 1px solid rgba(51, 51, 51, 0.5);
   transition: all 0.2s ease;
 
   &:hover {
@@ -22,11 +22,12 @@
       margin: 2px 0;
     }
 
-    .id {
+    .property {
+      font-size: 14px;
       font-weight: bold;
     }
 
-    .id > .value {
+    .property > .value {
       margin-left: 5px;
       font-weight: bold;
       font-size: 13px;
@@ -68,7 +69,7 @@
     }
 
     &:hover > .copyIcon {
-      opacity: 1;
+      opacity: 0.5;
     }
   }
 
