--- a/ui/components/ReportsPage/ReportsPage/ReportsPage.module.scss
+++ b/ui/components/ReportsPage/ReportsPage/ReportsPage.module.scss
@@ -5,6 +5,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
+  background-color: rgba(51, 51, 51, 0.3);
 
   .newReportInputContainer {
     margin-right: 10px;
